--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,12 +34,13 @@ android {
 
 dependencies {
     // 네이버 지도 SDK
-    implementation 'com.naver.maps:map-sdk:3.11.0'
+    implementation "com.naver.maps:map-sdk:3.11.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
