wip - add contact from device Contacts

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:theme="@style/Theme.Intime"
         android:usesCleartextTraffic="true">
         <activity android:name=".setting.SettingFavoriteActivity"></activity>
-        <activity android:name=".setting.SettingContactActivity" />
+        <activity android:name=".setting.SettingContactsActivity" />
         <activity android:name=".setting.SettingActivity" />
 
         <meta-data
