--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     // 네이버 지도 SDK
     implementation "com.naver.maps:map-sdk:3.11.0"
     implementation("com.google.android.gms:play-services-location:18.0.0")
+    //noinspection GradleDependency
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -54,6 +55,8 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.2.0'
 
     implementation 'gun0912.ted:tedpermission:2.2.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
 
     testImplementation 'junit:junit:4.13.2'
 
