--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,12 +19,10 @@
         android:theme="@style/Theme.Intime"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".splash.SplashScreen"
-            android:label="@string/title_activity_splash_screen"
+            android:name=".SplashActivity"
             android:theme="@style/Theme.Intime.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -37,13 +35,8 @@
             android:name="com.naver.maps.map.CLIENT_ID"
             android:value="3stwx8pka5" />
 
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
