--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    viewBinding {
-        enabled = true
+    buildFeatures {
+        viewBinding = true
+        dataBinding = true
     }
 }
 
@@ -59,5 +60,9 @@ dependencies {
 
     implementation 'androidx.room:room-runtime:2.3.0'
     kapt 'androidx.room:room-compiler:2.3.0'
+    implementation "androidx.room:room-ktx:2.3.0"
+    annotationProcessor "androidx.room:room-compiler:2.3.0"
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1'
 
 }
