--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Intime"
         android:usesCleartextTraffic="true">
-        <activity android:name=".sos.AmbulanceActivity"></activity>
+        <activity android:name=".info.checklist.ChecklistActivity"></activity>
+        <activity android:name=".sos.AmbulanceActivity" />
 
         <receiver android:name=".widget.IntimeWidget">
             <intent-filter>
