--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'org.greenrobot:eventbus:3.2.0'
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 
     implementation 'gun0912.ted:tedpermission:2.2.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
@@ -84,8 +85,5 @@ dependencies {
     // DotsIndicator
     implementation 'com.tbuonomo:dotsindicator:4.2'
     implementation 'me.relex:circleindicator:2.1.6'
-
-    //work manager
-    implementation "androidx.work:work-runtime-ktx:2.1.0"
 
 }
