--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Intime"
         android:usesCleartextTraffic="true">
-        <activity android:name=".info.checklist.ChecklistActivity"/>
+        <activity android:name=".info.checklist.AddChecklist"></activity>
+        <activity android:name=".info.checklist.ChecklistActivity" />
         <activity android:name=".sos.AmbulanceActivity" />
 
         <receiver android:name=".widget.IntimeWidget">
@@ -40,14 +41,8 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <!--Under Info:-->
-        <activity
-            android:name=".info.InfoActivity"
-            android:parentActivityName=".MainActivity" />
-        <activity
-            android:name=".info.DisasterActivity"
-            android:parentActivityName=".info.InfoActivity" />
+        </activity> <!-- Under Info: -->
+        <activity android:name=".info.DisasterActivity" />
         <activity
             android:name=".info.EarthquakeActivity"
             android:parentActivityName=".info.DisasterActivity" />
@@ -63,14 +58,8 @@
         <activity
             android:name=".info.UrbanFireActivity"
             android:parentActivityName=".info.DisasterActivity" />
-        <activity
-            android:name=".info.AedActivity"
-            android:parentActivityName=".info.InfoActivity" />
-        <activity
-            android:name=".info.CprActivity"
-            android:parentActivityName=".info.InfoActivity" />
-
-        <!--Settings:-->
+        <activity android:name=".info.AedActivity" />
+        <activity android:name=".info.CprActivity" /> <!-- Settings: -->
         <activity android:name=".setting.SettingAddContact" />
         <activity android:name=".setting.SettingFavoriteActivity" />
         <activity android:name=".setting.SettingContactsActivity" />
